<resources>
	<string name="app_name">OneOne</string>
	<string name="logger_title">One-One logger</string>
	<string name="log">Log</string>
	<string name="log_files">Log files</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="sent_report">Send report</string>
	<string name="select_action">Select an action</string>
	<string name="tag">Tag</string>
	<string name="type">Type</string>
	<string name="log_message">Log Message</string>
	<string name="app_info">Application Info</string>
	<string name="web_logger_url">Change Logger URL</string>
	<string name="copied">Copied</string>
	<string name="send">Send</string>
	<string name="version_code">Version code</string>
	<string name="version_android">Android version</string>
	<string name="package_name">Package name</string>
	<string name="version_name">Version name</string>
	<string name="phone">Phone</string>
	<string name="send_intent_title">Send to:</string>

	<string name="debug">Debug</string>
	<string name="warning">Warning</string>
	<string name="error">Error</string>
	<string name="info">Info</string>
	<string name="verbose">Verbose</string>
	<string name="clear_all_log_data">Clear all Log data</string>
	<string name="clear_all_log_files_data">Clear all Log Files data</string>
	<string name="delete">Delete</string>
	<string name="clear_all_messages">Clear all messages</string>
	<string name="share_text">Share text</string>
	<string name="share_file">Share file</string>
	<string name="time">Time</string>
	<string name="menu">Menu</string>
	<string name="oo_shared_prefs">Shared Preferences</string>
	<string name="oo_databases">Databases</string>
	<string name="copy_key">Copy key</string>
	<string name="copy_value">Copy value</string>
	<string name="copy_as_pair">Copy as pair</string>
	<string name="copy_as_json">Copy as Json string</string>
	<string name="no_log_messages">There are no log messages yet</string>
	<string name="no_sp_files">There are no\nShared Preferences files yet</string>
	<string name="no_log_files">There are no log files yet</string>
	<string name="cant_open_file">Can\'t open file</string>
	<string name="edit">Edit</string>
	<string name="enter_value">Enter a value</string>
	<string name="log_logcat">Logcat</string>

</resources>
